Add car delete button

--- a/templates/car.html
+++ b/templates/car.html
@@ -42,10 +42,11 @@
             </div>
 
             <button type="button" id="editButton" name="editButton" data-url="{% url 'cars:car-list' %}">Изменить параметры машины</button>
+            <button type="button" id="delteButton" name="delteButton" data-url="{% url 'cars:car-list' %}" class="bg-red-200 hover:bg-red-400 w-32 mx-auto rounded-md" >Удалить машину</button>
         </form>
-
         <div id="responseMessage"></div>
     </div>
+    
     {% endif %} 
 
     {% if not user.is_anonymous%}
